// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTestJavascriptTemplate > emits the Button JS test stub 1`] = `
"import { describe, it, expect } from 'vitest';
import { render } from '@testing-library/vue';
import Button from './Button.vue';

describe('Button', () => {
  it('renders without crashing', () => {
    const { container } = render(Button);
    expect(container.querySelector('wa-button')).toBeTruthy();
  });
});
"
`;

exports[`generateTestTypescriptTemplate > emits the Button TS test stub 1`] = `
"import { describe, it, expect } from 'vitest';
import { render } from '@testing-library/vue';
import Button from './Button.vue';

describe('Button', () => {
  it('renders without crashing', () => {
    const { container } = render(Button);
    expect(container.querySelector('wa-button')).toBeTruthy();
  });
});
"
`;

exports[`generateVueJavascriptTemplate > emits the Badge JS wrapper (no events, no methods branch) 1`] = `
"<script setup>
import { ref, onMounted, useAttrs } from 'vue';
import './Badge.css';

let loadPromise = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/badge/badge.js'));
}

/**
 * Badges are used to draw attention and display statuses or counts
 */
const props = defineProps({
    variant: { type: String, required: false, default: 'brand' },
    appearance: { type: String, required: false, default: 'accent' },
    pill: { type: Boolean, required: false, default: false },
    attention: { type: String, required: false, default: 'none' }
});

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes() {
  const result = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const elementRef = ref(null);

onMounted(() => {
  ensureLoaded();
});

defineExpose({
  element: elementRef,
});
</script>

<template>
  <wa-badge
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
  >
    <slot />
  </wa-badge>
</template>
"
`;

exports[`generateVueJavascriptTemplate > emits the Button JS wrapper 1`] = `
"<script setup>
import { ref, onMounted, useAttrs, onBeforeUnmount } from 'vue';
import './Button.css';

let loadPromise = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/button/button.js'));
}

/**
 * Buttons represent actions that are available to the user
 */
const props = defineProps({
    variant: { type: String, required: false, default: 'neutral' },
    appearance: { type: String, required: false, default: 'filled' },
    size: { type: String, required: false, default: 'medium' },
    pill: { type: Boolean, required: false, default: false },
    disabled: { type: Boolean, required: false, default: false },
    loading: { type: Boolean, required: false, default: false },
    'with-caret': { type: Boolean, required: false, default: false },
    href: { type: String, required: false },
    target: { type: String, required: false },
    download: { type: String, required: false },
    rel: { type: String, required: false },
    type: { type: String, required: false, default: 'button' },
    name: { type: String, required: false },
    value: { type: String, required: false },
    formaction: { type: String, required: false },
    formenctype: { type: String, required: false },
    formmethod: { type: String, required: false },
    formnovalidate: { type: Boolean, required: false, default: false },
    formtarget: { type: String, required: false }
});

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes() {
  const result = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits(['blur', 'focus', 'wa-invalid']);

const elementRef = ref(null);

onMounted(() => {
  ensureLoaded();
});

const handleBlur = (e) => emit('blur', e);
const handleFocus = (e) => emit('focus', e);
const handleWaInvalid = (e) => emit('wa-invalid', e);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('blur', handleBlur);
  el.addEventListener('focus', handleFocus);
  el.addEventListener('wa-invalid', handleWaInvalid);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('blur', handleBlur);
  el.removeEventListener('focus', handleFocus);
  el.removeEventListener('wa-invalid', handleWaInvalid);
});

defineExpose({
  click: () => elementRef.value?.click?.(),
  focus: (options) => elementRef.value?.focus?.(options),
  blur: () => elementRef.value?.blur?.(),
  setCustomValidity: (message) => elementRef.value?.setCustomValidity?.(message),
  formStateRestoreCallback: (state, reason) => elementRef.value?.formStateRestoreCallback?.(state, reason),
  resetValidity: () => elementRef.value?.resetValidity?.(),
  element: elementRef,
});
</script>

<template>
  <wa-button
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
  >
    <slot />
  </wa-button>
</template>
"
`;

exports[`generateVueJavascriptTemplate > emits the Dialog JS wrapper (open v-model branch) 1`] = `
"<script setup>
import { ref, onMounted, useAttrs, onBeforeUnmount, watch } from 'vue';
import './Dialog.css';

let loadPromise = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/dialog/dialog.js'));
}

/**
 * Dialogs appear above the page and require a response
 *
 * @remarks Open and close programmatically by binding the \`open\` prop (e.g. \`<Dialog v-model:open="isOpen">\`). The previous \`show()\` / \`requestClose()\` methods are marked private in WA 3.5.0+ and are no longer exposed.
 */
const props = defineProps({
    label: { type: String, required: false },
    'without-header': { type: Boolean, required: false, default: false }
});

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes() {
  const result = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits(['wa-show', 'wa-after-show', 'wa-hide', 'wa-after-hide']);

const open = defineModel('open', { default: false });

const elementRef = ref(null);

watch(open, (newOpen) => {
  const el = elementRef.value;
  if (el && el.open !== newOpen) el.open = newOpen;
});

onMounted(() => {
  ensureLoaded();
});

const handleWaShow = (e) => { open.value = true; emit('wa-show', e); };
const handleWaAfterShow = (e) => emit('wa-after-show', e);
const handleWaHide = (e) => { open.value = false; emit('wa-hide', e); };
const handleWaAfterHide = (e) => emit('wa-after-hide', e);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('wa-show', handleWaShow);
  el.addEventListener('wa-after-show', handleWaAfterShow);
  el.addEventListener('wa-hide', handleWaHide);
  el.addEventListener('wa-after-hide', handleWaAfterHide);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('wa-show', handleWaShow);
  el.removeEventListener('wa-after-show', handleWaAfterShow);
  el.removeEventListener('wa-hide', handleWaHide);
  el.removeEventListener('wa-after-hide', handleWaAfterHide);
});

defineExpose({
  element: elementRef,
});
</script>

<template>
  <wa-dialog
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
    :open="open || undefined"
  >
    <slot />
  </wa-dialog>
</template>
"
`;

exports[`generateVueJavascriptTemplate > emits the Input JS wrapper (value v-model branch) 1`] = `
"<script setup>
import { ref, onMounted, useAttrs, onBeforeUnmount, watch } from 'vue';
import './Input.css';

let loadPromise = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/input/input.js'));
}

/**
 * Inputs collect data from the user
 */
const props = defineProps({
    label: { type: String, required: false },
    disabled: { type: Boolean, required: false, default: false },
    'with-clear': { type: Boolean, required: false, default: false }
});

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes() {
  const result = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits(['input', 'change', 'blur', 'focus', 'wa-clear', 'wa-invalid']);

const model = defineModel();

const elementRef = ref(null);

watch(model, (val) => {
  const el = elementRef.value;
  if (el && el.value !== val) el.value = val ?? '';
});

onMounted(() => {
  ensureLoaded();
});

const handleInput = (e) => { model.value = e.target.value; emit('input', e); };
const handleChange = (e) => emit('change', e);
const handleBlur = (e) => emit('blur', e);
const handleFocus = (e) => emit('focus', e);
const handleWaClear = (e) => emit('wa-clear', e);
const handleWaInvalid = (e) => emit('wa-invalid', e);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('input', handleInput);
  el.addEventListener('change', handleChange);
  el.addEventListener('blur', handleBlur);
  el.addEventListener('focus', handleFocus);
  el.addEventListener('wa-clear', handleWaClear);
  el.addEventListener('wa-invalid', handleWaInvalid);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('input', handleInput);
  el.removeEventListener('change', handleChange);
  el.removeEventListener('blur', handleBlur);
  el.removeEventListener('focus', handleFocus);
  el.removeEventListener('wa-clear', handleWaClear);
  el.removeEventListener('wa-invalid', handleWaInvalid);
});

defineExpose({
  focus: (options) => elementRef.value?.focus?.(options),
  blur: () => elementRef.value?.blur?.(),
  select: () => elementRef.value?.select?.(),
  setSelectionRange: (selectionStart, selectionEnd, selectionDirection) => elementRef.value?.setSelectionRange?.(selectionStart, selectionEnd, selectionDirection),
  setRangeText: (replacement, start, end, selectMode) => elementRef.value?.setRangeText?.(replacement, start, end, selectMode),
  showPicker: () => elementRef.value?.showPicker?.(),
  stepUp: () => elementRef.value?.stepUp?.(),
  stepDown: () => elementRef.value?.stepDown?.(),
  setCustomValidity: (message) => elementRef.value?.setCustomValidity?.(message),
  formStateRestoreCallback: (state, reason) => elementRef.value?.formStateRestoreCallback?.(state, reason),
  resetValidity: () => elementRef.value?.resetValidity?.(),
  element: elementRef,
});
</script>

<template>
  <wa-input
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
    :value="model"
  >
    <slot />
  </wa-input>
</template>
"
`;

exports[`generateVueJavascriptTemplate > emits the Markdown JS wrapper with the @remarks JSDoc for removed imperative methods 1`] = `
"<script setup>
import { ref, onMounted, useAttrs } from 'vue';
import './Markdown.css';

let loadPromise = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/markdown/markdown.js'));
}

/**
 * Renders markdown content in plain HTML
 *
 * @remarks Re-render programmatically by updating the projected source content (slotted children). The previous \`getMarked()\` / \`updateAll()\` methods are marked private in WA 3.5.0+ and are no longer exposed; \`renderMarkdown()\` remains available.
 */
const props = defineProps({
    'tab-size': { type: Number, required: false, default: 4 }
});

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes() {
  const result = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const elementRef = ref(null);

onMounted(() => {
  ensureLoaded();
});

defineExpose({
  renderMarkdown: () => elementRef.value?.renderMarkdown?.(),
  element: elementRef,
});
</script>

<template>
  <wa-markdown
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
  >
    <slot />
  </wa-markdown>
</template>
"
`;

exports[`generateVueJavascriptTemplate > emits the NumberInput JS wrapper (untyped value model) 1`] = `
"<script setup>
import { ref, onMounted, useAttrs, onBeforeUnmount, watch } from 'vue';
import './NumberInput.css';

let loadPromise = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/number-input/number-input.js'));
}

/**
 * Number inputs collect numeric data from the user
 */
const props = defineProps({
    disabled: { type: Boolean, required: false, default: false }
});

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes() {
  const result = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits(['input', 'change', 'blur', 'focus', 'beforeinput', 'wa-invalid']);

const model = defineModel();

const elementRef = ref(null);

watch(model, (val) => {
  const el = elementRef.value;
  if (el && el.value !== val) el.value = val ?? '';
});

onMounted(() => {
  ensureLoaded();
});

const handleInput = (e) => { model.value = e.target.value; emit('input', e); };
const handleChange = (e) => emit('change', e);
const handleBlur = (e) => emit('blur', e);
const handleFocus = (e) => emit('focus', e);
const handleBeforeinput = (e) => emit('beforeinput', e);
const handleWaInvalid = (e) => emit('wa-invalid', e);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('input', handleInput);
  el.addEventListener('change', handleChange);
  el.addEventListener('blur', handleBlur);
  el.addEventListener('focus', handleFocus);
  el.addEventListener('beforeinput', handleBeforeinput);
  el.addEventListener('wa-invalid', handleWaInvalid);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('input', handleInput);
  el.removeEventListener('change', handleChange);
  el.removeEventListener('blur', handleBlur);
  el.removeEventListener('focus', handleFocus);
  el.removeEventListener('beforeinput', handleBeforeinput);
  el.removeEventListener('wa-invalid', handleWaInvalid);
});

defineExpose({
  focus: (options) => elementRef.value?.focus?.(options),
  blur: () => elementRef.value?.blur?.(),
  select: () => elementRef.value?.select?.(),
  stepUp: () => elementRef.value?.stepUp?.(),
  stepDown: () => elementRef.value?.stepDown?.(),
  setCustomValidity: (message) => elementRef.value?.setCustomValidity?.(message),
  formStateRestoreCallback: (state, reason) => elementRef.value?.formStateRestoreCallback?.(state, reason),
  resetValidity: () => elementRef.value?.resetValidity?.(),
  element: elementRef,
});
</script>

<template>
  <wa-number-input
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
    :value="model"
  >
    <slot />
  </wa-number-input>
</template>
"
`;

exports[`generateVueJavascriptTemplate > emits the Switch JS wrapper (checked v-model branch) 1`] = `
"<script setup>
import { ref, onMounted, useAttrs, onBeforeUnmount, watch } from 'vue';
import './Switch.css';

let loadPromise = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/switch/switch.js'));
}

/**
 * Switches allow the user to toggle an option on or off
 */
const props = defineProps({
    name: { type: String, required: false },
    value: { type: String, required: false },
    size: { type: String, required: false, default: 'medium' },
    disabled: { type: Boolean, required: false, default: false },
    required: { type: Boolean, required: false, default: false },
    hint: { type: String, required: false, default: '' }
});

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes() {
  const result = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits(['change', 'input', 'blur', 'focus', 'wa-invalid']);

const model = defineModel({ default: false });

const elementRef = ref(null);

watch(model, (val) => {
  const el = elementRef.value;
  if (el && el.checked !== val) el.checked = val ?? false;
});

onMounted(() => {
  ensureLoaded();
});

const handleChange = (e) => { model.value = e.target.checked; emit('change', e); };
const handleInput = (e) => emit('input', e);
const handleBlur = (e) => emit('blur', e);
const handleFocus = (e) => emit('focus', e);
const handleWaInvalid = (e) => emit('wa-invalid', e);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('change', handleChange);
  el.addEventListener('input', handleInput);
  el.addEventListener('blur', handleBlur);
  el.addEventListener('focus', handleFocus);
  el.addEventListener('wa-invalid', handleWaInvalid);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('change', handleChange);
  el.removeEventListener('input', handleInput);
  el.removeEventListener('blur', handleBlur);
  el.removeEventListener('focus', handleFocus);
  el.removeEventListener('wa-invalid', handleWaInvalid);
});

defineExpose({
  click: () => elementRef.value?.click?.(),
  focus: (options) => elementRef.value?.focus?.(options),
  blur: () => elementRef.value?.blur?.(),
  setCustomValidity: (message) => elementRef.value?.setCustomValidity?.(message),
  formStateRestoreCallback: (state, reason) => elementRef.value?.formStateRestoreCallback?.(state, reason),
  resetValidity: () => elementRef.value?.resetValidity?.(),
  element: elementRef,
});
</script>

<template>
  <wa-switch
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
    :checked="model || undefined"
  >
    <slot />
  </wa-switch>
</template>
"
`;

exports[`generateVueJavascriptTemplate > emits the Toast JS wrapper (no type import, bare method params) 1`] = `
"<script setup>
import { ref, onMounted, useAttrs } from 'vue';
import './Toast.css';

let loadPromise = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/toast/toast.js'));
}

/**
 * Toasts are used to display brief notifications
 */
const props = defineProps({
    variant: { type: String, required: false, default: 'brand' }
});

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes() {
  const result = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const elementRef = ref(null);

onMounted(() => {
  ensureLoaded();
});

defineExpose({
  create: (message, options) => elementRef.value?.create?.(message, options),
  element: elementRef,
});
</script>

<template>
  <wa-toast
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
  >
    <slot />
  </wa-toast>
</template>
"
`;

exports[`generateVueTypescriptTemplate > emits the Badge wrapper (no events, no methods branch) 1`] = `
"<script setup lang="ts">
import { ref, onMounted, useAttrs } from 'vue';
import type WaBadge from '@awesome.me/webawesome/dist/components/badge/badge.js';
import './Badge.css';

let loadPromise: Promise<unknown> | null = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/badge/badge.js'));
}

/**
 * Badges are used to draw attention and display statuses or counts
 */
export interface BadgeProps {
  variant?: 'brand' | 'neutral' | 'success' | 'warning' | 'danger';
  appearance?: 'accent' | 'filled' | 'outlined' | 'filled-outlined';
  pill?: boolean;
  attention?: 'none' | 'pulse' | 'bounce';
}

const props = defineProps<BadgeProps>();

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes(): Record<string, unknown> {
  const result: Record<string, unknown> = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props as Record<string, unknown>)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const elementRef = ref<WaBadge | null>(null);

onMounted(() => {
  ensureLoaded();
});

defineExpose({
  element: elementRef,
});
</script>

<template>
  <wa-badge
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
  >
    <slot />
  </wa-badge>
</template>
"
`;

exports[`generateVueTypescriptTemplate > emits the Button wrapper 1`] = `
"<script setup lang="ts">
import { ref, onMounted, useAttrs, onBeforeUnmount } from 'vue';
import type WaButton from '@awesome.me/webawesome/dist/components/button/button.js';
import type { WaInvalidEvent } from '@awesome.me/webawesome/dist/events/invalid.js';
import './Button.css';

let loadPromise: Promise<unknown> | null = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/button/button.js'));
}

/**
 * Buttons represent actions that are available to the user
 */
export interface ButtonProps {
  variant?: 'neutral' | 'brand' | 'success' | 'warning' | 'danger';
  appearance?: 'accent' | 'filled-outlined' | 'filled' | 'outlined' | 'plain';
  size?: 'small' | 'medium' | 'large';
  pill?: boolean;
  disabled?: boolean;
  loading?: boolean;
  'with-caret'?: boolean;
  href?: string;
  target?: '_blank' | '_self' | '_parent' | '_top';
  download?: string;
  rel?: string;
  type?: 'button' | 'submit' | 'reset';
  name?: string;
  value?: string;
  formaction?: string;
  formenctype?: string;
  formmethod?: string;
  formnovalidate?: boolean;
  formtarget?: string;
}

const props = defineProps<ButtonProps>();

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes(): Record<string, unknown> {
  const result: Record<string, unknown> = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props as Record<string, unknown>)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits<{
  'blur': [event: FocusEvent];
  'focus': [event: FocusEvent];
  'wa-invalid': [event: WaInvalidEvent];
}>();

const elementRef = ref<WaButton | null>(null);

onMounted(() => {
  ensureLoaded();
});

const handleBlur = (e: Event) => emit('blur', e as FocusEvent);
const handleFocus = (e: Event) => emit('focus', e as FocusEvent);
const handleWaInvalid = (e: Event) => emit('wa-invalid', e as WaInvalidEvent);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('blur', handleBlur);
  el.addEventListener('focus', handleFocus);
  el.addEventListener('wa-invalid', handleWaInvalid);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('blur', handleBlur);
  el.removeEventListener('focus', handleFocus);
  el.removeEventListener('wa-invalid', handleWaInvalid);
});

defineExpose({
  click: () => elementRef.value?.click?.(),
  focus: (options: FocusOptions) => elementRef.value?.focus?.(options),
  blur: () => elementRef.value?.blur?.(),
  setCustomValidity: (message: string) => elementRef.value?.setCustomValidity?.(message),
  formStateRestoreCallback: (state: string | File | FormData | null, reason: 'autocomplete' | 'restore') => elementRef.value?.formStateRestoreCallback?.(state, reason),
  resetValidity: () => elementRef.value?.resetValidity?.(),
  element: elementRef,
});
</script>

<template>
  <wa-button
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
  >
    <slot />
  </wa-button>
</template>
"
`;

exports[`generateVueTypescriptTemplate > emits the Dialog wrapper (open v-model branch) 1`] = `
"<script setup lang="ts">
import { ref, onMounted, useAttrs, onBeforeUnmount, watch } from 'vue';
import type WaDialog from '@awesome.me/webawesome/dist/components/dialog/dialog.js';
import type { WaAfterHideEvent } from '@awesome.me/webawesome/dist/events/after-hide.js';
import type { WaAfterShowEvent } from '@awesome.me/webawesome/dist/events/after-show.js';
import type { WaHideEvent } from '@awesome.me/webawesome/dist/events/hide.js';
import type { WaShowEvent } from '@awesome.me/webawesome/dist/events/show.js';
import './Dialog.css';

let loadPromise: Promise<unknown> | null = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/dialog/dialog.js'));
}

/**
 * Dialogs appear above the page and require a response
 *
 * @remarks Open and close programmatically by binding the \`open\` prop (e.g. \`<Dialog v-model:open="isOpen">\`). The previous \`show()\` / \`requestClose()\` methods are marked private in WA 3.5.0+ and are no longer exposed.
 */
export interface DialogProps {
  label?: string;
  'without-header'?: boolean;
}

const props = defineProps<DialogProps>();

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes(): Record<string, unknown> {
  const result: Record<string, unknown> = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props as Record<string, unknown>)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits<{
  'wa-show': [event: WaShowEvent];
  'wa-after-show': [event: WaAfterShowEvent];
  'wa-hide': [event: WaHideEvent];
  'wa-after-hide': [event: WaAfterHideEvent];
}>();

const open = defineModel<boolean>('open', { default: false });

const elementRef = ref<WaDialog | null>(null);

watch(open, (newOpen) => {
  const el = elementRef.value as (HTMLElement & { open: boolean }) | null;
  if (el && el.open !== newOpen) el.open = newOpen;
});

onMounted(() => {
  ensureLoaded();
});

const handleWaShow = (e: Event) => { open.value = true; emit('wa-show', e as WaShowEvent); };
const handleWaAfterShow = (e: Event) => emit('wa-after-show', e as WaAfterShowEvent);
const handleWaHide = (e: Event) => { open.value = false; emit('wa-hide', e as WaHideEvent); };
const handleWaAfterHide = (e: Event) => emit('wa-after-hide', e as WaAfterHideEvent);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('wa-show', handleWaShow);
  el.addEventListener('wa-after-show', handleWaAfterShow);
  el.addEventListener('wa-hide', handleWaHide);
  el.addEventListener('wa-after-hide', handleWaAfterHide);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('wa-show', handleWaShow);
  el.removeEventListener('wa-after-show', handleWaAfterShow);
  el.removeEventListener('wa-hide', handleWaHide);
  el.removeEventListener('wa-after-hide', handleWaAfterHide);
});

defineExpose({
  element: elementRef,
});
</script>

<template>
  <wa-dialog
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
    :open="open || undefined"
  >
    <slot />
  </wa-dialog>
</template>
"
`;

exports[`generateVueTypescriptTemplate > emits the Input wrapper (value v-model branch) 1`] = `
"<script setup lang="ts">
import { ref, onMounted, useAttrs, onBeforeUnmount, watch } from 'vue';
import type WaInput from '@awesome.me/webawesome/dist/components/input/input.js';
import type { WaClearEvent } from '@awesome.me/webawesome/dist/events/clear.js';
import type { WaInvalidEvent } from '@awesome.me/webawesome/dist/events/invalid.js';
import './Input.css';

let loadPromise: Promise<unknown> | null = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/input/input.js'));
}

/**
 * Inputs collect data from the user
 */
export interface InputProps {
  label?: string;
  disabled?: boolean;
  'with-clear'?: boolean;
}

const props = defineProps<InputProps>();

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes(): Record<string, unknown> {
  const result: Record<string, unknown> = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props as Record<string, unknown>)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits<{
  'input': [event: InputEvent];
  'change': [event: Event];
  'blur': [event: FocusEvent];
  'focus': [event: FocusEvent];
  'wa-clear': [event: WaClearEvent];
  'wa-invalid': [event: WaInvalidEvent];
}>();

const model = defineModel<string>();

const elementRef = ref<WaInput | null>(null);

watch(model, (val) => {
  const el = elementRef.value as (HTMLElement & { value: unknown }) | null;
  if (el && el.value !== val) el.value = val ?? '';
});

onMounted(() => {
  ensureLoaded();
});

const handleInput = (e: Event) => { model.value = (e.target as HTMLElement & { value: string }).value; emit('input', e as InputEvent); };
const handleChange = (e: Event) => emit('change', e);
const handleBlur = (e: Event) => emit('blur', e as FocusEvent);
const handleFocus = (e: Event) => emit('focus', e as FocusEvent);
const handleWaClear = (e: Event) => emit('wa-clear', e as WaClearEvent);
const handleWaInvalid = (e: Event) => emit('wa-invalid', e as WaInvalidEvent);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('input', handleInput);
  el.addEventListener('change', handleChange);
  el.addEventListener('blur', handleBlur);
  el.addEventListener('focus', handleFocus);
  el.addEventListener('wa-clear', handleWaClear);
  el.addEventListener('wa-invalid', handleWaInvalid);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('input', handleInput);
  el.removeEventListener('change', handleChange);
  el.removeEventListener('blur', handleBlur);
  el.removeEventListener('focus', handleFocus);
  el.removeEventListener('wa-clear', handleWaClear);
  el.removeEventListener('wa-invalid', handleWaInvalid);
});

defineExpose({
  focus: (options: FocusOptions) => elementRef.value?.focus?.(options),
  blur: () => elementRef.value?.blur?.(),
  select: () => elementRef.value?.select?.(),
  setSelectionRange: (selectionStart: number, selectionEnd: number, selectionDirection: 'forward' | 'backward' | 'none') => elementRef.value?.setSelectionRange?.(selectionStart, selectionEnd, selectionDirection),
  setRangeText: (replacement: string, start: number, end: number, selectMode: 'select' | 'start' | 'end' | 'preserve') => elementRef.value?.setRangeText?.(replacement, start, end, selectMode),
  showPicker: () => elementRef.value?.showPicker?.(),
  stepUp: () => elementRef.value?.stepUp?.(),
  stepDown: () => elementRef.value?.stepDown?.(),
  setCustomValidity: (message: string) => elementRef.value?.setCustomValidity?.(message),
  formStateRestoreCallback: (state: string | File | FormData | null, reason: 'autocomplete' | 'restore') => elementRef.value?.formStateRestoreCallback?.(state, reason),
  resetValidity: () => elementRef.value?.resetValidity?.(),
  element: elementRef,
});
</script>

<template>
  <wa-input
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
    :value="model"
  >
    <slot />
  </wa-input>
</template>
"
`;

exports[`generateVueTypescriptTemplate > emits the Markdown wrapper with the @remarks JSDoc for removed imperative methods 1`] = `
"<script setup lang="ts">
import { ref, onMounted, useAttrs } from 'vue';
import type WaMarkdown from '@awesome.me/webawesome/dist/components/markdown/markdown.js';
import './Markdown.css';

let loadPromise: Promise<unknown> | null = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/markdown/markdown.js'));
}

/**
 * Renders markdown content in plain HTML
 *
 * @remarks Re-render programmatically by updating the projected source content (slotted children). The previous \`getMarked()\` / \`updateAll()\` methods are marked private in WA 3.5.0+ and are no longer exposed; \`renderMarkdown()\` remains available.
 */
export interface MarkdownProps {
  'tab-size'?: number;
}

const props = defineProps<MarkdownProps>();

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes(): Record<string, unknown> {
  const result: Record<string, unknown> = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props as Record<string, unknown>)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const elementRef = ref<WaMarkdown | null>(null);

onMounted(() => {
  ensureLoaded();
});

defineExpose({
  renderMarkdown: () => elementRef.value?.renderMarkdown?.(),
  element: elementRef,
});
</script>

<template>
  <wa-markdown
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
  >
    <slot />
  </wa-markdown>
</template>
"
`;

exports[`generateVueTypescriptTemplate > emits the NumberInput wrapper (number-typed value model) 1`] = `
"<script setup lang="ts">
import { ref, onMounted, useAttrs, onBeforeUnmount, watch } from 'vue';
import type WaNumberInput from '@awesome.me/webawesome/dist/components/number-input/number-input.js';
import type { WaInvalidEvent } from '@awesome.me/webawesome/dist/events/invalid.js';
import './NumberInput.css';

let loadPromise: Promise<unknown> | null = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/number-input/number-input.js'));
}

/**
 * Number inputs collect numeric data from the user
 */
export interface NumberInputProps {
  disabled?: boolean;
}

const props = defineProps<NumberInputProps>();

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes(): Record<string, unknown> {
  const result: Record<string, unknown> = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props as Record<string, unknown>)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits<{
  'input': [event: InputEvent];
  'change': [event: Event];
  'blur': [event: FocusEvent];
  'focus': [event: FocusEvent];
  'beforeinput': [event: InputEvent];
  'wa-invalid': [event: WaInvalidEvent];
}>();

const model = defineModel<number>();

const elementRef = ref<WaNumberInput | null>(null);

watch(model, (val) => {
  const el = elementRef.value as (HTMLElement & { value: unknown }) | null;
  if (el && el.value !== val) el.value = val ?? '';
});

onMounted(() => {
  ensureLoaded();
});

const handleInput = (e: Event) => { model.value = (e.target as HTMLElement & { value: number }).value; emit('input', e as InputEvent); };
const handleChange = (e: Event) => emit('change', e);
const handleBlur = (e: Event) => emit('blur', e as FocusEvent);
const handleFocus = (e: Event) => emit('focus', e as FocusEvent);
const handleBeforeinput = (e: Event) => emit('beforeinput', e as InputEvent);
const handleWaInvalid = (e: Event) => emit('wa-invalid', e as WaInvalidEvent);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('input', handleInput);
  el.addEventListener('change', handleChange);
  el.addEventListener('blur', handleBlur);
  el.addEventListener('focus', handleFocus);
  el.addEventListener('beforeinput', handleBeforeinput);
  el.addEventListener('wa-invalid', handleWaInvalid);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('input', handleInput);
  el.removeEventListener('change', handleChange);
  el.removeEventListener('blur', handleBlur);
  el.removeEventListener('focus', handleFocus);
  el.removeEventListener('beforeinput', handleBeforeinput);
  el.removeEventListener('wa-invalid', handleWaInvalid);
});

defineExpose({
  focus: (options: FocusOptions) => elementRef.value?.focus?.(options),
  blur: () => elementRef.value?.blur?.(),
  select: () => elementRef.value?.select?.(),
  stepUp: () => elementRef.value?.stepUp?.(),
  stepDown: () => elementRef.value?.stepDown?.(),
  setCustomValidity: (message: string) => elementRef.value?.setCustomValidity?.(message),
  formStateRestoreCallback: (state: string | File | FormData | null, reason: 'autocomplete' | 'restore') => elementRef.value?.formStateRestoreCallback?.(state, reason),
  resetValidity: () => elementRef.value?.resetValidity?.(),
  element: elementRef,
});
</script>

<template>
  <wa-number-input
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
    :value="model"
  >
    <slot />
  </wa-number-input>
</template>
"
`;

exports[`generateVueTypescriptTemplate > emits the Switch wrapper (checked v-model branch) 1`] = `
"<script setup lang="ts">
import { ref, onMounted, useAttrs, onBeforeUnmount, watch } from 'vue';
import type WaSwitch from '@awesome.me/webawesome/dist/components/switch/switch.js';
import type { WaInvalidEvent } from '@awesome.me/webawesome/dist/events/invalid.js';
import './Switch.css';

let loadPromise: Promise<unknown> | null = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/switch/switch.js'));
}

/**
 * Switches allow the user to toggle an option on or off
 */
export interface SwitchProps {
  name?: string;
  value?: string;
  size?: 'small' | 'medium' | 'large';
  disabled?: boolean;
  required?: boolean;
  hint?: string;
}

const props = defineProps<SwitchProps>();

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes(): Record<string, unknown> {
  const result: Record<string, unknown> = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props as Record<string, unknown>)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const emit = defineEmits<{
  'change': [event: Event];
  'input': [event: InputEvent];
  'blur': [event: FocusEvent];
  'focus': [event: FocusEvent];
  'wa-invalid': [event: WaInvalidEvent];
}>();

const model = defineModel<boolean>({ default: false });

const elementRef = ref<WaSwitch | null>(null);

watch(model, (val) => {
  const el = elementRef.value as (HTMLElement & { checked: boolean }) | null;
  if (el && el.checked !== val) el.checked = val ?? false;
});

onMounted(() => {
  ensureLoaded();
});

const handleChange = (e: Event) => { model.value = (e.target as HTMLElement & { checked: boolean }).checked; emit('change', e); };
const handleInput = (e: Event) => emit('input', e as InputEvent);
const handleBlur = (e: Event) => emit('blur', e as FocusEvent);
const handleFocus = (e: Event) => emit('focus', e as FocusEvent);
const handleWaInvalid = (e: Event) => emit('wa-invalid', e as WaInvalidEvent);

onMounted(() => {
  const el = elementRef.value;
  if (!el) return;

  el.addEventListener('change', handleChange);
  el.addEventListener('input', handleInput);
  el.addEventListener('blur', handleBlur);
  el.addEventListener('focus', handleFocus);
  el.addEventListener('wa-invalid', handleWaInvalid);
});

onBeforeUnmount(() => {
  const el = elementRef.value;
  if (!el) return;

  el.removeEventListener('change', handleChange);
  el.removeEventListener('input', handleInput);
  el.removeEventListener('blur', handleBlur);
  el.removeEventListener('focus', handleFocus);
  el.removeEventListener('wa-invalid', handleWaInvalid);
});

defineExpose({
  click: () => elementRef.value?.click?.(),
  focus: (options: FocusOptions) => elementRef.value?.focus?.(options),
  blur: () => elementRef.value?.blur?.(),
  setCustomValidity: (message: string) => elementRef.value?.setCustomValidity?.(message),
  formStateRestoreCallback: (state: string | File | FormData | null, reason: 'autocomplete' | 'restore') => elementRef.value?.formStateRestoreCallback?.(state, reason),
  resetValidity: () => elementRef.value?.resetValidity?.(),
  element: elementRef,
});
</script>

<template>
  <wa-switch
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
    :checked="model || undefined"
  >
    <slot />
  </wa-switch>
</template>
"
`;

exports[`generateVueTypescriptTemplate > emits the Toast wrapper (custom type import, parameterised method) 1`] = `
"<script setup lang="ts">
import { ref, onMounted, useAttrs } from 'vue';
import type WaToast from '@awesome.me/webawesome/dist/components/toast/toast.js';
import type { ToastCreateOptions } from '@awesome.me/webawesome/dist/components/toast/toast.js';
import './Toast.css';

let loadPromise: Promise<unknown> | null = null;
function ensureLoaded() {
  return (loadPromise ??= import('@awesome.me/webawesome/dist/components/toast/toast.js'));
}

/**
 * Toasts are used to display brief notifications
 */
export interface ToastProps {
  variant?: 'brand' | 'success' | 'warning' | 'danger';
}

const props = defineProps<ToastProps>();

defineOptions({ inheritAttrs: false });

// Forward props and fallthrough attributes to the web component yourself,
// rather than through Vue's default fallthrough:
// - Web Awesome reads attribute presence as truthy, so \`false\` must never
//   reach <wa-*>. Vue materializes every absent optional Boolean prop as
//   \`false\`, and would render a fallthrough \`false\` as the string "false".
//   \`aria-*\` / \`data-*\` keep \`false\`, where "false" is a real value.
// - Vue camelizes declared prop keys (\`with-caret\` -> \`withCaret\`). Before
//   the element upgrades, that key lands as the attribute \`withcaret\`, which
//   Web Awesome never reads, so props go back to their kebab-case names.
// A plain function, not \`computed\`: \`attrs\` is tracked per property read,
// so a computed over an empty \`attrs\` would never see a later attribute.
const attrs = useAttrs();

function hostAttributes(): Record<string, unknown> {
  const result: Record<string, unknown> = {};
  for (const [key, value] of Object.entries(attrs)) {
    if (key === 'class') continue;
    if (value === false && !/^(aria|data)-/.test(key)) continue;
    result[key] = value;
  }
  for (const [key, value] of Object.entries(props as Record<string, unknown>)) {
    if (value === undefined || value === false) continue;
    result[key.replace(/[A-Z]/g, (c) => \`-\${c.toLowerCase()}\`)] = value;
  }
  return result;
}

const elementRef = ref<WaToast | null>(null);

onMounted(() => {
  ensureLoaded();
});

defineExpose({
  create: (message: string, options: ToastCreateOptions) => elementRef.value?.create?.(message, options),
  element: elementRef,
});
</script>

<template>
  <wa-toast
    ref="elementRef"
    v-bind="hostAttributes()"
    :class="$attrs.class"
  >
    <slot />
  </wa-toast>
</template>
"
`;
